fix: add align-items start to alert__description

--- a/src/stories/molecules/Alert/Alert.css
+++ b/src/stories/molecules/Alert/Alert.css
@@ -44,6 +44,7 @@
   margin-block-start: var(--spacing-2);
   display: flex;
   flex-direction: column;
+  align-items: start;
   gap: var(--spacing-2);
 }
 
